// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UserContextualizedLocDetails renders for requester 1`] = `
<LocPane
  contributionMode="Requester"
  loc={
    Object {
      "createdOn": "2023-10-10T08:25:18.546Z",
      "decisionOn": "2023-10-10T08:25:18.546Z",
      "description": "Description",
      "fees": Object {
        "collectionItemFee": Lgnt {
          "canonical": 0n,
        },
        "legalFee": Lgnt {
          "canonical": 0n,
        },
        "tokensRecordFee": Lgnt {
          "canonical": 0n,
        },
        "valueFee": Lgnt {
          "canonical": 0n,
        },
      },
      "files": Array [],
      "id": UUID {
        "bytes": Array [
          147,
          99,
          195,
          214,
          209,
          7,
          66,
          26,
          164,
          75,
          133,
          199,
          250,
          176,
          184,
          67,
        ],
      },
      "invitedContributors": Array [],
      "issuers": Array [],
      "links": Array [],
      "locType": "Identity",
      "metadata": Array [],
      "ownerAccountId": ValidAccountId {
        "anyAccountId": AnyAccountId {
          "address": "vQx5kESPn8dWyX4KxMCKqUyCaWUwtui1isX6PVNcZh2Ghjitr",
          "type": "Polkadot",
        },
      },
      "requesterAccountId": ValidAccountId {
        "anyAccountId": AnyAccountId {
          "address": "vQv9qfqLY88pF4poNh6XpvUpxC9MAdcwLjVma8LMcyMYFff5h",
          "type": "Polkadot",
        },
      },
      "requesterLocId": undefined,
      "status": "OPEN",
      "verifiedIssuer": false,
    }
  }
>
  <LocDetailsTab
    checkResult={
      Object {
        "result": "NONE",
      }
    }
    contributionMode="Requester"
    legalOfficer={
      Object {
        "account": ValidAccountId {
          "anyAccountId": AnyAccountId {
            "address": "vQx5kESPn8dWyX4KxMCKqUyCaWUwtui1isX6PVNcZh2Ghjitr",
            "type": "Polkadot",
          },
        },
        "additionalDetails": "",
        "name": "Patrick Gielen",
        "node": "http://logion.patrick.com",
        "nodeId": "",
        "postalAddress": Object {
          "city": "Etterbeek",
          "company": "MODERO",
          "country": "Belgique",
          "line1": "Huissier de Justice Etterbeek",
          "line2": "Rue Beckers 17",
          "postalCode": "1040",
        },
        "region": "Europe",
        "userIdentity": Object {
          "email": "patrick@logion.network",
          "firstName": "Patrick",
          "lastName": "Gielen",
          "phoneNumber": "+32 498 237 107",
        },
      }
    }
    loc={
      Object {
        "createdOn": "2023-10-10T08:25:18.546Z",
        "decisionOn": "2023-10-10T08:25:18.546Z",
        "description": "Description",
        "fees": Object {
          "collectionItemFee": Lgnt {
            "canonical": 0n,
          },
          "legalFee": Lgnt {
            "canonical": 0n,
          },
          "tokensRecordFee": Lgnt {
            "canonical": 0n,
          },
          "valueFee": Lgnt {
            "canonical": 0n,
          },
        },
        "files": Array [],
        "id": UUID {
          "bytes": Array [
            147,
            99,
            195,
            214,
            209,
            7,
            66,
            26,
            164,
            75,
            133,
            199,
            250,
            176,
            184,
            67,
          ],
        },
        "invitedContributors": Array [],
        "issuers": Array [],
        "links": Array [],
        "locType": "Identity",
        "metadata": Array [],
        "ownerAccountId": ValidAccountId {
          "anyAccountId": AnyAccountId {
            "address": "vQx5kESPn8dWyX4KxMCKqUyCaWUwtui1isX6PVNcZh2Ghjitr",
            "type": "Polkadot",
          },
        },
        "requesterAccountId": ValidAccountId {
          "anyAccountId": AnyAccountId {
            "address": "vQv9qfqLY88pF4poNh6XpvUpxC9MAdcwLjVma8LMcyMYFff5h",
            "type": "Polkadot",
          },
        },
        "requesterLocId": undefined,
        "status": "OPEN",
        "verifiedIssuer": false,
      }
    }
    locItems={Array []}
    viewer="User"
  />
  <BlockNone
    show={false}
  >
    <OpenLoc
      loc={
        Object {
          "createdOn": "2023-10-10T08:25:18.546Z",
          "decisionOn": "2023-10-10T08:25:18.546Z",
          "description": "Description",
          "fees": Object {
            "collectionItemFee": Lgnt {
              "canonical": 0n,
            },
            "legalFee": Lgnt {
              "canonical": 0n,
            },
            "tokensRecordFee": Lgnt {
              "canonical": 0n,
            },
            "valueFee": Lgnt {
              "canonical": 0n,
            },
          },
          "files": Array [],
          "id": UUID {
            "bytes": Array [
              147,
              99,
              195,
              214,
              209,
              7,
              66,
              26,
              164,
              75,
              133,
              199,
              250,
              176,
              184,
              67,
            ],
          },
          "invitedContributors": Array [],
          "issuers": Array [],
          "links": Array [],
          "locType": "Identity",
          "metadata": Array [],
          "ownerAccountId": ValidAccountId {
            "anyAccountId": AnyAccountId {
              "address": "vQx5kESPn8dWyX4KxMCKqUyCaWUwtui1isX6PVNcZh2Ghjitr",
              "type": "Polkadot",
            },
          },
          "requesterAccountId": ValidAccountId {
            "anyAccountId": AnyAccountId {
              "address": "vQv9qfqLY88pF4poNh6XpvUpxC9MAdcwLjVma8LMcyMYFff5h",
              "type": "Polkadot",
            },
          },
          "requesterLocId": undefined,
          "status": "OPEN",
          "verifiedIssuer": false,
        }
      }
    />
  </BlockNone>
  <React.Fragment>
    <VoidDisclaimer
      loc={
        Object {
          "createdOn": "2023-10-10T08:25:18.546Z",
          "decisionOn": "2023-10-10T08:25:18.546Z",
          "description": "Description",
          "fees": Object {
            "collectionItemFee": Lgnt {
              "canonical": 0n,
            },
            "legalFee": Lgnt {
              "canonical": 0n,
            },
            "tokensRecordFee": Lgnt {
              "canonical": 0n,
            },
            "valueFee": Lgnt {
              "canonical": 0n,
            },
          },
          "files": Array [],
          "id": UUID {
            "bytes": Array [
              147,
              99,
              195,
              214,
              209,
              7,
              66,
              26,
              164,
              75,
              133,
              199,
              250,
              176,
              184,
              67,
            ],
          },
          "invitedContributors": Array [],
          "issuers": Array [],
          "links": Array [],
          "locType": "Identity",
          "metadata": Array [],
          "ownerAccountId": ValidAccountId {
            "anyAccountId": AnyAccountId {
              "address": "vQx5kESPn8dWyX4KxMCKqUyCaWUwtui1isX6PVNcZh2Ghjitr",
              "type": "Polkadot",
            },
          },
          "requesterAccountId": ValidAccountId {
            "anyAccountId": AnyAccountId {
              "address": "vQv9qfqLY88pF4poNh6XpvUpxC9MAdcwLjVma8LMcyMYFff5h",
              "type": "Polkadot",
            },
          },
          "requesterLocId": undefined,
          "status": "OPEN",
          "verifiedIssuer": false,
        }
      }
    />
    <CertificateAndDetailsButtons
      contributionMode="Requester"
      isReadOnly={false}
      loc={
        Object {
          "createdOn": "2023-10-10T08:25:18.546Z",
          "decisionOn": "2023-10-10T08:25:18.546Z",
          "description": "Description",
          "fees": Object {
            "collectionItemFee": Lgnt {
              "canonical": 0n,
            },
            "legalFee": Lgnt {
              "canonical": 0n,
            },
            "tokensRecordFee": Lgnt {
              "canonical": 0n,
            },
            "valueFee": Lgnt {
              "canonical": 0n,
            },
          },
          "files": Array [],
          "id": UUID {
            "bytes": Array [
              147,
              99,
              195,
              214,
              209,
              7,
              66,
              26,
              164,
              75,
              133,
              199,
              250,
              176,
              184,
              67,
            ],
          },
          "invitedContributors": Array [],
          "issuers": Array [],
          "links": Array [],
          "locType": "Identity",
          "metadata": Array [],
          "ownerAccountId": ValidAccountId {
            "anyAccountId": AnyAccountId {
              "address": "vQx5kESPn8dWyX4KxMCKqUyCaWUwtui1isX6PVNcZh2Ghjitr",
              "type": "Polkadot",
            },
          },
          "requesterAccountId": ValidAccountId {
            "anyAccountId": AnyAccountId {
              "address": "vQv9qfqLY88pF4poNh6XpvUpxC9MAdcwLjVma8LMcyMYFff5h",
              "type": "Polkadot",
            },
          },
          "requesterLocId": undefined,
          "status": "OPEN",
          "verifiedIssuer": false,
        }
      }
      viewer="User"
    />
    <SupersedesDisclaimer
      loc={
        Object {
          "createdOn": "2023-10-10T08:25:18.546Z",
          "decisionOn": "2023-10-10T08:25:18.546Z",
          "description": "Description",
          "fees": Object {
            "collectionItemFee": Lgnt {
              "canonical": 0n,
            },
            "legalFee": Lgnt {
              "canonical": 0n,
            },
            "tokensRecordFee": Lgnt {
              "canonical": 0n,
            },
            "valueFee": Lgnt {
              "canonical": 0n,
            },
          },
          "files": Array [],
          "id": UUID {
            "bytes": Array [
              147,
              99,
              195,
              214,
              209,
              7,
              66,
              26,
              164,
              75,
              133,
              199,
              250,
              176,
              184,
              67,
            ],
          },
          "invitedContributors": Array [],
          "issuers": Array [],
          "links": Array [],
          "locType": "Identity",
          "metadata": Array [],
          "ownerAccountId": ValidAccountId {
            "anyAccountId": AnyAccountId {
              "address": "vQx5kESPn8dWyX4KxMCKqUyCaWUwtui1isX6PVNcZh2Ghjitr",
              "type": "Polkadot",
            },
          },
          "requesterAccountId": ValidAccountId {
            "anyAccountId": AnyAccountId {
              "address": "vQv9qfqLY88pF4poNh6XpvUpxC9MAdcwLjVma8LMcyMYFff5h",
              "type": "Polkadot",
            },
          },
          "requesterLocId": undefined,
          "status": "OPEN",
          "verifiedIssuer": false,
        }
      }
    />
    <CheckFileFrame
      checkResult="NONE"
      checkedItem="confidential document"
      context="Identity LOC"
    />
  </React.Fragment>
</LocPane>
`;

exports[`UserContextualizedLocDetails renders for verified issuer 1`] = `
<LocPane
  contributionMode="VerifiedIssuer"
  loc={
    Object {
      "createdOn": "2023-10-10T08:25:18.546Z",
      "decisionOn": "2023-10-10T08:25:18.546Z",
      "description": "Description",
      "fees": Object {
        "collectionItemFee": Lgnt {
          "canonical": 0n,
        },
        "legalFee": Lgnt {
          "canonical": 0n,
        },
        "tokensRecordFee": Lgnt {
          "canonical": 0n,
        },
        "valueFee": Lgnt {
          "canonical": 0n,
        },
      },
      "files": Array [],
      "id": UUID {
        "bytes": Array [
          147,
          99,
          195,
          214,
          209,
          7,
          66,
          26,
          164,
          75,
          133,
          199,
          250,
          176,
          184,
          67,
        ],
      },
      "invitedContributors": Array [],
      "issuers": Array [],
      "links": Array [],
      "locType": "Identity",
      "metadata": Array [],
      "ownerAccountId": ValidAccountId {
        "anyAccountId": AnyAccountId {
          "address": "vQx5kESPn8dWyX4KxMCKqUyCaWUwtui1isX6PVNcZh2Ghjitr",
          "type": "Polkadot",
        },
      },
      "requesterAccountId": ValidAccountId {
        "anyAccountId": AnyAccountId {
          "address": "vQv9qfqLY88pF4poNh6XpvUpxC9MAdcwLjVma8LMcyMYFff5h",
          "type": "Polkadot",
        },
      },
      "requesterLocId": undefined,
      "status": "OPEN",
      "verifiedIssuer": false,
    }
  }
>
  <IssuerInfo />
  <LocDetailsTab
    checkResult={
      Object {
        "result": "NONE",
      }
    }
    contributionMode="VerifiedIssuer"
    legalOfficer={
      Object {
        "account": ValidAccountId {
          "anyAccountId": AnyAccountId {
            "address": "vQx5kESPn8dWyX4KxMCKqUyCaWUwtui1isX6PVNcZh2Ghjitr",
            "type": "Polkadot",
          },
        },
        "additionalDetails": "",
        "name": "Patrick Gielen",
        "node": "http://logion.patrick.com",
        "nodeId": "",
        "postalAddress": Object {
          "city": "Etterbeek",
          "company": "MODERO",
          "country": "Belgique",
          "line1": "Huissier de Justice Etterbeek",
          "line2": "Rue Beckers 17",
          "postalCode": "1040",
        },
        "region": "Europe",
        "userIdentity": Object {
          "email": "patrick@logion.network",
          "firstName": "Patrick",
          "lastName": "Gielen",
          "phoneNumber": "+32 498 237 107",
        },
      }
    }
    loc={
      Object {
        "createdOn": "2023-10-10T08:25:18.546Z",
        "decisionOn": "2023-10-10T08:25:18.546Z",
        "description": "Description",
        "fees": Object {
          "collectionItemFee": Lgnt {
            "canonical": 0n,
          },
          "legalFee": Lgnt {
            "canonical": 0n,
          },
          "tokensRecordFee": Lgnt {
            "canonical": 0n,
          },
          "valueFee": Lgnt {
            "canonical": 0n,
          },
        },
        "files": Array [],
        "id": UUID {
          "bytes": Array [
            147,
            99,
            195,
            214,
            209,
            7,
            66,
            26,
            164,
            75,
            133,
            199,
            250,
            176,
            184,
            67,
          ],
        },
        "invitedContributors": Array [],
        "issuers": Array [],
        "links": Array [],
        "locType": "Identity",
        "metadata": Array [],
        "ownerAccountId": ValidAccountId {
          "anyAccountId": AnyAccountId {
            "address": "vQx5kESPn8dWyX4KxMCKqUyCaWUwtui1isX6PVNcZh2Ghjitr",
            "type": "Polkadot",
          },
        },
        "requesterAccountId": ValidAccountId {
          "anyAccountId": AnyAccountId {
            "address": "vQv9qfqLY88pF4poNh6XpvUpxC9MAdcwLjVma8LMcyMYFff5h",
            "type": "Polkadot",
          },
        },
        "requesterLocId": undefined,
        "status": "OPEN",
        "verifiedIssuer": false,
      }
    }
    locItems={Array []}
    viewer="User"
  />
  <BlockNone
    show={false}
  >
    <OpenLoc
      loc={
        Object {
          "createdOn": "2023-10-10T08:25:18.546Z",
          "decisionOn": "2023-10-10T08:25:18.546Z",
          "description": "Description",
          "fees": Object {
            "collectionItemFee": Lgnt {
              "canonical": 0n,
            },
            "legalFee": Lgnt {
              "canonical": 0n,
            },
            "tokensRecordFee": Lgnt {
              "canonical": 0n,
            },
            "valueFee": Lgnt {
              "canonical": 0n,
            },
          },
          "files": Array [],
          "id": UUID {
            "bytes": Array [
              147,
              99,
              195,
              214,
              209,
              7,
              66,
              26,
              164,
              75,
              133,
              199,
              250,
              176,
              184,
              67,
            ],
          },
          "invitedContributors": Array [],
          "issuers": Array [],
          "links": Array [],
          "locType": "Identity",
          "metadata": Array [],
          "ownerAccountId": ValidAccountId {
            "anyAccountId": AnyAccountId {
              "address": "vQx5kESPn8dWyX4KxMCKqUyCaWUwtui1isX6PVNcZh2Ghjitr",
              "type": "Polkadot",
            },
          },
          "requesterAccountId": ValidAccountId {
            "anyAccountId": AnyAccountId {
              "address": "vQv9qfqLY88pF4poNh6XpvUpxC9MAdcwLjVma8LMcyMYFff5h",
              "type": "Polkadot",
            },
          },
          "requesterLocId": undefined,
          "status": "OPEN",
          "verifiedIssuer": false,
        }
      }
    />
  </BlockNone>
  <React.Fragment>
    <VoidDisclaimer
      loc={
        Object {
          "createdOn": "2023-10-10T08:25:18.546Z",
          "decisionOn": "2023-10-10T08:25:18.546Z",
          "description": "Description",
          "fees": Object {
            "collectionItemFee": Lgnt {
              "canonical": 0n,
            },
            "legalFee": Lgnt {
              "canonical": 0n,
            },
            "tokensRecordFee": Lgnt {
              "canonical": 0n,
            },
            "valueFee": Lgnt {
              "canonical": 0n,
            },
          },
          "files": Array [],
          "id": UUID {
            "bytes": Array [
              147,
              99,
              195,
              214,
              209,
              7,
              66,
              26,
              164,
              75,
              133,
              199,
              250,
              176,
              184,
              67,
            ],
          },
          "invitedContributors": Array [],
          "issuers": Array [],
          "links": Array [],
          "locType": "Identity",
          "metadata": Array [],
          "ownerAccountId": ValidAccountId {
            "anyAccountId": AnyAccountId {
              "address": "vQx5kESPn8dWyX4KxMCKqUyCaWUwtui1isX6PVNcZh2Ghjitr",
              "type": "Polkadot",
            },
          },
          "requesterAccountId": ValidAccountId {
            "anyAccountId": AnyAccountId {
              "address": "vQv9qfqLY88pF4poNh6XpvUpxC9MAdcwLjVma8LMcyMYFff5h",
              "type": "Polkadot",
            },
          },
          "requesterLocId": undefined,
          "status": "OPEN",
          "verifiedIssuer": false,
        }
      }
    />
    <CertificateAndDetailsButtons
      contributionMode="VerifiedIssuer"
      isReadOnly={false}
      loc={
        Object {
          "createdOn": "2023-10-10T08:25:18.546Z",
          "decisionOn": "2023-10-10T08:25:18.546Z",
          "description": "Description",
          "fees": Object {
            "collectionItemFee": Lgnt {
              "canonical": 0n,
            },
            "legalFee": Lgnt {
              "canonical": 0n,
            },
            "tokensRecordFee": Lgnt {
              "canonical": 0n,
            },
            "valueFee": Lgnt {
              "canonical": 0n,
            },
          },
          "files": Array [],
          "id": UUID {
            "bytes": Array [
              147,
              99,
              195,
              214,
              209,
              7,
              66,
              26,
              164,
              75,
              133,
              199,
              250,
              176,
              184,
              67,
            ],
          },
          "invitedContributors": Array [],
          "issuers": Array [],
          "links": Array [],
          "locType": "Identity",
          "metadata": Array [],
          "ownerAccountId": ValidAccountId {
            "anyAccountId": AnyAccountId {
              "address": "vQx5kESPn8dWyX4KxMCKqUyCaWUwtui1isX6PVNcZh2Ghjitr",
              "type": "Polkadot",
            },
          },
          "requesterAccountId": ValidAccountId {
            "anyAccountId": AnyAccountId {
              "address": "vQv9qfqLY88pF4poNh6XpvUpxC9MAdcwLjVma8LMcyMYFff5h",
              "type": "Polkadot",
            },
          },
          "requesterLocId": undefined,
          "status": "OPEN",
          "verifiedIssuer": false,
        }
      }
      viewer="User"
    />
    <SupersedesDisclaimer
      loc={
        Object {
          "createdOn": "2023-10-10T08:25:18.546Z",
          "decisionOn": "2023-10-10T08:25:18.546Z",
          "description": "Description",
          "fees": Object {
            "collectionItemFee": Lgnt {
              "canonical": 0n,
            },
            "legalFee": Lgnt {
              "canonical": 0n,
            },
            "tokensRecordFee": Lgnt {
              "canonical": 0n,
            },
            "valueFee": Lgnt {
              "canonical": 0n,
            },
          },
          "files": Array [],
          "id": UUID {
            "bytes": Array [
              147,
              99,
              195,
              214,
              209,
              7,
              66,
              26,
              164,
              75,
              133,
              199,
              250,
              176,
              184,
              67,
            ],
          },
          "invitedContributors": Array [],
          "issuers": Array [],
          "links": Array [],
          "locType": "Identity",
          "metadata": Array [],
          "ownerAccountId": ValidAccountId {
            "anyAccountId": AnyAccountId {
              "address": "vQx5kESPn8dWyX4KxMCKqUyCaWUwtui1isX6PVNcZh2Ghjitr",
              "type": "Polkadot",
            },
          },
          "requesterAccountId": ValidAccountId {
            "anyAccountId": AnyAccountId {
              "address": "vQv9qfqLY88pF4poNh6XpvUpxC9MAdcwLjVma8LMcyMYFff5h",
              "type": "Polkadot",
            },
          },
          "requesterLocId": undefined,
          "status": "OPEN",
          "verifiedIssuer": false,
        }
      }
    />
    <CheckFileFrame
      checkResult="NONE"
      checkedItem="confidential document"
      context="Identity LOC"
    />
  </React.Fragment>
</LocPane>
`;
